--- a/install/AUTHORS.txt
+++ b/install/AUTHORS.txt
@@ -5,7 +5,7 @@ This software was downloaded from blobgame.com
 This version's PRIMARY AUTHORS are:
 * Ben Pietrzak <pietrzakben@gmail.com>
 * Hyung-Kyu Kim <@hyungkim7>
-* Daniel Thornburgh
+* Daniel Thornburgh <mysterymath@gmail.com>
 * James Watterson <@watterso>
 * Ian Watterson <ian.watterson@gmail.com>
 * Harrison Gentry <harrison.c.gentry@gmail.com>
